--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- Favicon -->
         <link rel="shortcut icon" href="https://img.icons8.com/color-glass/48/000000/internet.png" type="image" />
         <!-- Meta descriptiond -->
-        <meta name="description" content="En this is Santi nos enfocamos en desarrollar tecnologia especialmente para tu proyecto, full responsive, Desarrollo de apps ">
+        <meta name="description" content="tecnologia especialmente para tu proyecto, full responsive, Desarrollo de apps ">
         <!-- Meta Keywords -->
         <meta name="keywords" content="desarrollo web, app, ecomerce, SEO, ux,ui, marketing, css, tecnologia.">
         <!-- Open graph -->
