--- a/skills.html
+++ b/skills.html
@@ -6,18 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Title -->
-    <title>Skills│This is Santi│Web Designer│Full-Stack Developer│</title>
+    <title>Skills│Kraken│Web Designer│Full-Stack Developer│</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="https://img.icons8.com/color-glass/48/000000/internet.png" type="image" />
     <!-- Meta descriptiond -->
-    <meta name="description" content="En this is Santi nos enfocamos en desarrollar tecnologia especialmente para tu proyecto, full responsive, Desarrollo de apps ">
+    <meta name="description" content="Specialist in web development, full responsive, apps, technology development especially for your project.">
     <!-- Meta Keywords -->
-    <meta name="keywords" content="desarrollo web, app, ecomerce, SEO, ux,ui, marketing, css, tecnologia.">
+    <meta name="keywords" content="web developer,designer,">
     <!-- Open graph -->
-    <meta property="og:type" content="Portfolio"/>
-    <meta property="og:title" content="Tecnologia diseñada para ti"/>
-    <meta property="og:description" content="Especialista en desarrollo web, full responsive, apps, desarrollo de tecnologia especialmente para tu proyecto."/>
-    <meta property="og:url" content="https://santi-iztli.github.io/portfolio/"/>
+    <meta property="og:type" content="Kraken│Portfolio"/>
+    <meta property="og:title" content="Technology specialized in you"/>
+    <meta property="og:description" content="Specialist in web development, full responsive, apps, technology development especially for your project."/>
+    <meta property="og:url" content="https://krakendev7.github.io/kraken.site/"/>
     <meta property="og:image" content="https://img.icons8.com/color-glass/48/000000/internet.png"/>
     <!-- links -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
