--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!-- Title -->
-        <title>Home│This is Santi│Web Designer│Full-Stack Developer│</title>
+        <title>Home│Kraken│Web Designer│Full-Stack Developer│</title>
         <!-- Favicon -->
         <link rel="shortcut icon" href="https://img.icons8.com/color-glass/48/000000/internet.png" type="image" />
         <!-- Meta descriptiond -->
-        <meta name="description" content="tecnologia especialmente para tu proyecto, full responsive, Desarrollo de apps ">
+        <meta name="description" content="Specialist in web development, full responsive, apps, technology development especially for your project.">
         <!-- Meta Keywords -->
-        <meta name="keywords" content="desarrollo web, app, ecomerce, SEO, ux,ui, marketing, css, tecnologia.">
+        <meta name="keywords" content="web developer,designer,">
         <!-- Open graph -->
-        <meta property="og:type" content="Portfolio"/>
-        <meta property="og:title" content="Tecnologia diseñada para ti"/>
-        <meta property="og:description" content="Especialista en desarrollo web, full responsive, apps, desarrollo de tecnologia especialmente para tu proyecto."/>
-        <meta property="og:url" content="https://santi-iztli.github.io/portfolio/"/>
+        <meta property="og:type" content="Kraken│Portfolio"/>
+        <meta property="og:title" content="Technology specialized in you"/>
+        <meta property="og:description" content="Specialist in web development, full responsive, apps, technology development especially for your project."/>
+        <meta property="og:url" content="https://krakendev7.github.io/kraken.site/"/>
         <meta property="og:image" content="https://img.icons8.com/color-glass/48/000000/internet.png"/>
         <!-- links -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
@@ -78,17 +78,8 @@
                   </div>     
         </section>
     </head>
-        <!-- Start: Copyright 2022 TraceMyIP.org Service Code (034010-04072022)- DO NOT MODIFY //-->
-        <div id="elemID031021" style="line-height: 16px; text-align: center; position: relative; z-index: 100000;">
-            <script
-                type="text/javascript"
-                src="https://s2.tracemyip.org/tracker/lgUrl.php?random='+Math.random()+'&amp;stlVar2=1500~1649302651~14*2~0F5999*F7FFE6*537899*000000~1*1*1*1*1&amp;rgtype=4684NR-IPIB&amp;pidnVar2=96941&amp;prtVar2=11&amp;scvVar2=12"
-            ></script>
-            <noscript>
-                <a href="https://www.tracemyip.org/"><img src="https://s2.tracemyip.org/tracker/1500~1649302651~14*2~0F5999*F7FFE6*537899*000000~1*1*1*1*1/4684NR-IPIB/96941/11/12/ans/" alt="MY IP ADDRESS" style="border: 0px;" /></a>
-            </noscript>
-        </div>
-        <!-- End: TraceMyIP.org Service Code //-->
+<!-- Start: Copyright 2022 TraceMyIP.org Service Code (184029-05032022)- DO NOT MODIFY //-->
+<div id="elemID031021" style="line-height:16px;text-align:center;position:relative;z-index:100000;"><script type="text/javascript" src="https://s2.tracemyip.org/tracker/lgUrl.php?random='+Math.random()+'&amp;stlVar2=1500~1651603090~10*2~0F5999*F7FFE6*537899*000000~0*0*0*0*0&amp;rgtype=4684NR-IPIB&amp;pidnVar2=96954&amp;prtVar2=11&amp;scvVar2=12"></script><noscript><a title="Weebly hits ipv6 addresses tracer" href="https://www.tracemyip.org/tools/website-visitors-counter-traffic-tracker-statistics/"><img src="https://s2.tracemyip.org/tracker/1500~1651603090~10*2~0F5999*F7FFE6*537899*000000~0*0*0*0*0/4684NR-IPIB/96954/11/12/ans/" alt="Weebly Hits Ipv6 Addresses Tracer" style="border:0px;"></a></noscript></div> <!-- End: TraceMyIP.org Service Code //-->
         <!-- Bootstrap Separate -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
