--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
                 <img src="https://i.ibb.co/Ycj2kq1/img1.webp" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Programing</h5>
-                  <p>Coming soon!</p>
+                  <p>Your profile</p>
                 </div>
               </div>
             </div>
