--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
             <h2 class="rainbow_bg">Contact :</h2>
             <a  class="mailbox_a" subject="Mail from MFC" href="mailto:krake.dev.7@gmail.com"><img class="mail_box" src="https://i.ibb.co/1J8PXt9/mail-to.webp" alt="mail box">
             <div class="contactCard">
-            <span class="fa fa-envelope-o">krake.dev.7@gmail.com</span>
+            <span class="fa fa-envelope-o">kraken.dev.7@gmail.com</span>
           </div></a>
         <!-- particles wallpaper -->
         <div class="animation-wrapper">
